--- a/src/app/components/courses-section/course-added-dialogue/course-added-dialogue.component.html
+++ b/src/app/components/courses-section/course-added-dialogue/course-added-dialogue.component.html
@@ -1,1 +1,4 @@
-<p>course-added-dialogue works!</p>
+<h1 mat-dialog-title>You added a course successfully</h1>
+<div mat-dialog-actions>
+    <button mat-button (click)="onNoClick()">Ok</button>
+</div>
