--- a/src/app/components/courses-section/course-files/course-files.component.html
+++ b/src/app/components/courses-section/course-files/course-files.component.html
@@ -1,1 +1,5 @@
-<p>course-files works!</p>
+<div *ngFor = "let file of courseFiles; let i = index">
+    <a href="{{file.url}}" target="_blank" rel="noopener noreferrer">
+        File{{i+1}}
+    </a>
+</div>
